tests/paczka1/small_fuzzy/19998929.err
Error in line 1: qwm S196 15,4
Error in line 4: qwm A350 64,2
Error in line 3: 3fH A399 55,8
Error in line 2: 9wzZLeP A350 48,5
